<resources>
    <string name="app_name">Моя семья</string>

    <string name="toast_message">Toast message</string>

    <string name="event_calendar">Календарь событий</string>
    <string name="time_table">Мои дела</string>
    <string name="chat">Чат</string>
    <string name="buy_list">Список покупок</string>
    <string name="clock">Будильник</string>
    <string name="storage">Хранилище</string>

    <string name="registerOrLoginString">Чтобы войти или зарегестироваться введите свой номер телефона</string>
    <string name="verificationCode">Проверочный код</string>
    <string name="enterCode">Введите код</string>
    <string name="weEnterSMSWithCode">Мы отправили SMS с кодом на Ваш телефон  </string>
    <string name="enter_your_number_phone">Введите номер телефона</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="welcome_text_enter_personal_data_fragment">Добро пожаловать в наше приложение!\nВведите некоторую информацию о себе</string>
    <string name="you_name">Ваше имя</string>
    <string name="you_phone_number">Ваш номер телефона</string>
    <string name="birthday">День рождения</string>
    <string name="register">Зарегистрироваться</string>

    <string name="create_family">Создать семью</string>
    <string name="join">присоедениться</string>
    <string name="family_last_name">Фамилия семьи</string>
    <string name="create">Создать</string>
    <string name="enter_family_last_name">Введите фамилию семьи</string>
    <string name="wait_a_bit">Подождите немного</string>
    <string name="everything_went_well">Всё прошло успешно</string>
    <string name="enter_family_identification">Чтобы присоедениться к семье, введите её уникальный идентификатор (можно узнать в настройках семьи)</string>

    <string name="enter_identification">Введите идентификатор</string>
    <string name="you_canceled_searches">Вы отменили поиск</string>
    <string name="family_not_found">Семья с таким идентификатором не найдена</string>
    <string name="you_success_join_to_you_family">Вы успешно присоеденились к своей семье</string>
    <string name="error">Что-то пошло не так</string>
    <string name="my_family">Моя семья</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="link_to_invite">Ссылка для приглашения в семью</string>
    <string name="copy_to_clipboard_manager">Скопировано в буфер обмена</string>
    <string name="you_was_invite_to_family">Вас пригласили в семью</string>
    <string name="do_you_want_join_to_invite_family">Вас Пригласили в семью, не хотите ли присоедениться к ней?</string>
    <string name="yes">Да</string>
    <string name="no">нет</string>
    <string name="link_is_not_correct">Ссылка не корректна</string>


    <string name="menu_item_text_signout">Выход</string>
    <string name="you">ВЫ</string>
    <string name="connection_is_not">Нет подключения к интернету</string>
    <string name="photo">фото</string>
    <string name="voice">голосовое сообщение</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>
    <string name="new_message">Новое сообщение</string>


    <string name="liter">литров</string>
    <string name="thing">штук</string>
    <string name="kilogram">килограммов</string>
    <string name="pack">пакетов</string>
    <string name="empty"></string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="enter_buy_list_name">Введите название списка покупок</string>
    <string name="have_not_internet_connection">Нет подключения к интернету</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Название продукта</string>
    <string name="count">кол-во</string>
    <string name="enter_product_name">Введите название продукта</string>
    <string name="extra_options">Дополнительные параметры</string>
    <string name="enter_count">Введите кол-во</string>
    <string name="comment">Комментарий</string>
    <string name="edit">Редактировать</string>
    <string name="remove">Удалить</string>
    <string name="remove_product">Удалить продукт</string>
    <string name="change_or_delete_product_dialog_text1">Вы действительно хотите удалить продукт </string>
    <string name="change_or_delete_product_dialog_text2">\nВосстановить его будет невозможно!</string>
    <string name="remove_buy_list">Удалить список покупок</string>
    <string name="change_or_delet_buy_list_dialog_text1">Вы действительно хотите удалить список покупок </string>
    <string name="this_buy_list_was_remove">Этот список покупок был удалён</string>
    <string name="in_developing">В разработке</string>
    <string name="edit_personal_data">Редактировать личную информацию</string>
    <string name="personal_dairy">Личный дневник</string>
    <string name="settings_chat_summary">Если галочка стоит, то вы будите получать push-уведомления сообщений из семейного чата</string>
    <string name="notification_from_chat">Уведомления из чата</string>
    <string name="news_center">Новостной центр</string>
    <string name="text">Текст</string>
    <string name="image">Картинка</string>
    <string name="video">Видео</string>
    <string name="settings">Настройки</string>
    <string name="create_news">Создать новость</string>
    <string name="news_text">Текст новости</string>
    <string name="enter_news_text">Введите текст новости</string>
    <string name="chose_image">Выберите картику</string>
    <string name="news_success_add">Новость успешно создана</string>
    <string name="create_new_news">Создать новую новость</string>
    <string name="family_identeficator">Идентификатор семьи</string>
    <string name="change">Изменить</string>
    <string name="title">Заголовок</string>
    <string name="write_here">Напишите здесь...</string>
    <string name="image_added_yet">Картинка уже добавлена</string>
    <string name="save">Сохранить</string>
    <string name="note_is_empty">Заметка пустая</string>
    <string name="permision_not_got">Разрешение не получено</string>
    <string name="pictures">Картинки</string>
    <string name="videos">Видео</string>
    <string name="Documents">Документы</string>
    <string name="Notes">Заметки</string>
    <string name="create_folder">Создать папку</string>
    <string name="folder_name_is_empty">Название папки не может быть пустым</string>
    <string name="file_name_is_empty">Название файла не может быть пустым</string>
    <string name="add_image">Добавьте картинку</string>
    <string name="enter_image_name">Введите имя картинке</string>
    <string name="remove_file">Удалить файл</string>
    <string name="dialog_delet_file_accept">Вы действительно хотите удалить файл file_name Восстановить его будет невозможно!</string>
    <string name="rescue">Спасти</string>
    <string name="remove_note_question">Удалить заметку?</string>
    <string name="accept_remove_dairy">Вы действительно хотите удалить эту заметку? Востановить её будет невозможно!</string>
    <string name="remove_image">Удалить картику</string>
    <string name="accept_remove_image">Вы действительно хотите удалить эту картику? Восстановиь её будет невозможно!</string>
    <string name="rename">Переименовать</string>
    <string name="remove_folder">Удалить папку</string>
    <string name="accept_remove_folder">Вы точно хотите удалить папку folder_name ? Восстановить её будет невозможно!</string>
    <string name="choose_file">Выберите файл</string>
    <string name="file_manager_not_found">Файловый менеджер не найден</string>
    <string name="folder_name">Название папки</string>
    <string name="file_name">Название файла</string>
    <string name="enter_your_name">Введите своё имя</string>
    <string name="enter_birhday">Выберите дату рождения</string>
    <string name="unknown_error">неизвестная ошибка</string>
    <string name="participant">Участник</string>
    <string name="creator">Создатель</string>
    <string name="clock_is_on_by">\"Будильник заведён: \"</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="selected_time_is_end">Указанное время прошло</string>
    <string name="notone_not_selected">Ни один из членов семьи не выбран</string>
    <string name="needed_permission_not_got">Нужное разрешение не получено!</string>

</resources>