<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

<!--    <com.rengwuxian.materialedittext.MaterialEditText-->
<!--        android:id="@+id/product_name"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        app:met_floatingLabel="highlight"-->
<!--        app:met_floatingLabelTextSize="10sp"-->
<!--        app:met_floatingLabelTextColor="@color/black"-->
<!--        android:hint="@string/product_name"-->
<!--        app:met_floatingLabelAnimating="true"-->
<!--        app:met_floatingLabelText="@string/product_name" />-->

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_margin="10dp"
        android:hint="@string/product_name"
        android:inputType="textPersonName"/>


    <LinearLayout
        android:id="@+id/layout_extra_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

         <EditText
             android:layout_margin="10dp"
             android:id="@+id/comment_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="70dp"
             android:hint="@string/comment"/>
    </LinearLayout>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/button_add_product"
            style="@android:style/Widget.Material.Light.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>



