<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/simple_background"
    tools:context=".ui.screens.family_storage.SelectStorageActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_images"
            style="@style/family_storage_card_option">

            <TextView
                style="@style/select_storage_activity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pictures" />


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                style="@style/family_storage_ico"
                android:src="@drawable/ic_family_images"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_videos"
            style="@style/family_storage_card_option">

            <TextView
                style="@style/select_storage_activity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/videos" />


            <ImageView
                style="@style/family_storage_ico"
                android:src="@drawable/ic_family_videos"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll1">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_files"
            style="@style/family_storage_card_option">

            <TextView
                style="@style/select_storage_activity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Documents" />


            <ImageView
                style="@style/family_storage_ico"
                android:src="@drawable/ic_family_files"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_notes"
            style="@style/family_storage_card_option">

            <TextView
                style="@style/select_storage_activity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Notes" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                style="@style/family_storage_ico"
                android:src="@drawable/ic_family_note"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>